# ImarTTY

./: .gitignore  ARCHITECTURE.md  Architecture.md  LICENSE  README.md  main.css  main.py  main.tcss  pyproject.toml  requirements.txt
tests/: test_ai.py  test_ai_providers.py  test_commander.py  test_config.py  test_context.py  test_history.py  test_log_analyzer.py  test_optimization.py
tui/: widgets.py
utils/: ai.py  commander.py  config.py  context.py  history.py  list_models.py  log_analyzer.py  logger.py
